Name change daas->daas_api. GetAll no phrases err

--- a/k3d-conf.yaml
+++ b/k3d-conf.yaml
@@ -1,7 +1,7 @@
 apiVersion: k3d.io/v1alpha4
 kind: Simple
 metadata:
-  name: daas
+  name: daas_api
 registries:
   create:
     name: registry.localhost
