--- a/config.env
+++ b/config.env
@@ -5,6 +5,8 @@ DAAS_LOGGER_LEVEL=debug
 DAAS_LOGGER_ENCODING=console
 # String: IP Address
 DAAS_API_ADDRESS=:8080
+# String: "redis" or "sqlite"
+DAAS_API_BACKEND=sqlite
 
 ### REDIS CONFIG ###
 # String: IP Address
