Removed Redis. Changed Graceful shutdown.

--- a/config.env
+++ b/config.env
@@ -3,13 +3,20 @@
 DAAS_LOGGER_LEVEL=debug
 # String: console or encode
 DAAS_LOGGER_ENCODING=console
+# String: debug or release
+DAAS_API_MODE=debug
 # String: IP Address
 DAAS_API_ADDRESS=:8080
 # String: "redis" or "sqlite"
-DAAS_API_BACKEND=sqlite
+# DAAS_API_BACKEND=sqlite
 
 ### REDIS CONFIG ###
 # String: IP Address
-REDIS_ADDRESS="localhost:6379"
+REDIS_ADDRESS=localhost:6379
 # String:
-REDIS_PASSWORD=""
+REDIS_PASSWORD=
+
+### SQLITE CONFIG ###
+# String:
+SQLITE_DATABASE_NAME=database
+SQLITE_TABLE_NAME=phrases
