--- a/config.env
+++ b/config.env
@@ -7,6 +7,10 @@ DAAS_LOGGER_ENCODING=console
 DAAS_API_MODE=debug
 # String: IP Address
 DAAS_API_ADDRESS=:8080
+# String: IP Address
+DAAS_API_CERT="cert.pem"
+# String: IP Address
+DAAS_API_KEY="key.pem"
 # String: "redis" or "sqlite"
 # DAAS_API_BACKEND=sqlite
 
