--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.DS_Store
-.idea
-*.log
 tmp/
 /bin/
 /build/
@@ -10,6 +7,10 @@ tmp/
 /data/
 /mocks/*.go
 /data_processing/
+/node_modules/
+*.log
 *.db
 *.pem
 *.http
+.idea
+.DS_Store
