--- a/config.env
+++ b/config.env
@@ -8,9 +8,9 @@ DAAS_API_MODE=debug
 # String: IP Address
 DAAS_API_ADDRESS=:8443
 # String: IP Address
-DAAS_API_CERT="cert.pem"
+DAAS_API_CERT="server.crt"
 # String: IP Address
-DAAS_API_KEY="key.pem"
+mAAS_API_KEY="server.key"
 # String: "redis" or "sqlite"
 # DAAS_API_BACKEND=sqlite
 
